--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
     "@chainlink/contracts": "^0.6.1",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "chai": "^4.3.7",
     "dotenv": "^16.3.1",
     "ethereum-waffle": "^4.0.10",
@@ -12,6 +12,7 @@
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-deploy": "^0.11.34",
     "hardhat-gas-reporter": "^1.0.9",
+    "mocha": "^10.2.0",
     "solhint": "^3.5.1",
     "solidity-coverage": "^0.8.4"
   }
